--- a/views/registration/card_print.html
+++ b/views/registration/card_print.html
@@ -33,63 +33,67 @@
             <div class="col-md-12">
               <table class="table table-bordered">
                 <tbody>
-                  <tr>
+                  <tr ng-if="registerDetails.registration_type">
                     <th scope="row">Registration Type</th>
                     <td>{{registerDetails.registration_type}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.first_name">
                     <th scope="row">FIrst Name</th>
                     <td>{{registerDetails.first_name}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.last_name">
                     <th scope="row">Last Name</th>
                     <td>{{registerDetails.last_name}}</td>
                   </tr>
-                  <tr>
-                    <th scope="row">Address</th>
-                    <td>{{registerDetails.street}},{{registerDetails.city}},{{registerDetails.zip}},{{registerDetails.state}}</td>
+                  <tr  ng-if="registerDetails.street">
+                    <th scope="row">Street Name</th>
+                    <td>{{registerDetails.street}},,</td>
                   </tr>
-                  <tr>
-                    <th scope="row">Mobile</th>
-                    <td>{{registerDetails.mobile}}</td>
+                  <tr ng-if="registerDetails.city">
+                    <th scope="row">City Name</th>
+                    <td>{{registerDetails.city}}</td>
                   </tr>
-                  <tr>
-                    <th scope="row">Email</th>
-                    <td>{{registerDetails.email}}</td>
+                  <tr ng-if="registerDetails.zip">
+                    <th scope="row">Zip code</th>
+                    <td>{{registerDetails.zip}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.state">
+                    <th scope="row">State</th>
+                    <td>{{registerDetails.state}}</td>
+                  </tr>
+                  <tr ng-if="registerDetails.gender">
                     <th scope="row">Gender</th>
                     <td>{{registerDetails.gender}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.marital_status">
                     <th scope="row">Maritial Status</th>
                     <td>{{registerDetails.marital_status}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.prof_type">
                     <th scope="row">Profession Type</th>
                     <td>{{registerDetails.prof_type}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.guardian_name">
                     <th scope="row">Guardian Name</th>
                     <td>{{registerDetails.guardian_name}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.guardian_mobile">
                     <th scope="row">Guardian Mobile no</th>
                     <td>{{registerDetails.guardian_mobile}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.department">
                     <th scope="row">Department</th>
                     <td>{{registerDetails.department}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.doctor">
                     <th scope="row">Doctor Name</th>
                     <td>{{registerDetails.doctor}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.doct_location">
                     <th scope="row">Doctor Location</th>
                     <td>{{registerDetails.doct_location}}</td>
                   </tr>
-                  <tr>
+                  <tr ng-if="registerDetails.doct_price">
                     <th scope="row">Doctor Fee</th>
                     <td>{{registerDetails.doct_price}}</td>
                   </tr>
