--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -485,7 +485,7 @@
    </div>
    <div class="form-group row">
      <div class="col-sm-12 text-right">
-       <button type="submit" class="btn btn-primary" ng-click="register()">
+       <button ng-disabled= "patient_registration.$invalid" type="submit" class="btn btn-primary" ng-click="register()">
          Submit
        </button>
      </div>
