--- a/views/header.html
+++ b/views/header.html
@@ -1,8 +1,8 @@
 <section  align="center m-t-sm">
     <alert class="alert-message"  ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
 </section>
-<header class="header">
-  <div class="header-block header-block-collapse hidden-lg-up">
+<header class="main-header">
+  <div class="header-block header-block-collapse">
     <button class="collapse-btn" id="sidebar-collapse-btn">
       <i class="fa fa-bars"></i>
     </button>
