--- a/views/registration/patient_view.html
+++ b/views/registration/patient_view.html
@@ -32,7 +32,7 @@
                   </tr>
                   <tr>
                     <th scope="row">Name</th>
-                    <td>{{registerDetails.first_name+" "+registerDetails.last_name}}</td>
+                    <td>{{registerDetails.name}}</td>
                   </tr>
                   <tr ng-if="registerDetails.email">
                     <th scope="row">Email</th>
