--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -30,8 +30,14 @@
                 <li class="customize">
                     <div class="customize-item">
                         <ul class="customize-colors">
-                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/english.jpg" alt="" width="50"></li>
-                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/France.jpg" alt="" width="50"></li>
+                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/english.jpg" alt=""></li>
+                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/France.jpg" alt=""></li>
+                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/american.png" alt=""></li>
+                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/germany.png" alt=""></li>
+                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/hindi.png" alt=""></li>
+                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/italian.png" alt=""></li>
+                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/japanees.png" alt=""></li>
+                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/chinees.png" alt=""></li>
                         </ul>
                     </div>
                 </li>
