--- a/views/registration/patient_edit.html
+++ b/views/registration/patient_edit.html
@@ -41,15 +41,14 @@
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.first_name.$invalid && patient_registration.first_name.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 First Name:
+                 Name:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed"  ng-model="patient.first_name" name="first_name" placeholder="First Name"  ng-pattern="/^(\D)+$/" required>
-                 <span class="help-block" ng-show="patient_registration.first_name.$error.required && patient_registration.first_name.$touched">Please enter first name</span>
-                 <span class="help-block" ng-show="patient_registration.first_name.$error.pattern && patient_registration.first_name.$touched">first name should not be numeric</span>
+                 <input type="text" class="form-control boxed"  ng-model="patient.name" name="first_name" placeholder="First Name" required>
+                 <span class="help-block"  ng-show="patient_registration.first_name.$error.required && patient_registration.first_name.$touched">Please enter first name</span>
                </div>
              </div>
-             <div class="form-group row" ng-class="{'has-error': (patient_registration.last_name.$invalid && patient_registration.last_name.$touched)}">
+             <!-- <div class="form-group row" ng-class="{'has-error': (patient_registration.last_name.$invalid && patient_registration.last_name.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
                  Last Name:
                </label>
@@ -58,7 +57,7 @@
                  <span class="help-block" ng-show="patient_registration.last_name.$error.required && patient_registration.last_name.$touched">Please enter last name</span>
                  <span class="help-block" ng-show="patient_registration.last_name.$error.pattern && patient_registration.last_name.$touched">last name should not be numeric</span>
                </div>
-             </div>
+             </div> -->
              <div class="form-group row">
                <label class="col-sm-2 form-control-label text-xs-right">
                 Gender:
@@ -81,17 +80,17 @@
                  Mobile:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.mobile" name="mobile" placeholder="Mobile" required ng-pattern="/^[0-9]{10,10}$/">
+                 <input type="text" class="form-control boxed" ng-model="patient.mobile" name="mobile" placeholder="Mobile" required ng-pattern="/^((\+\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,3})|(\(?\d{2,3}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$/">
                  <span class="help-block" ng-show="patient_registration.mobile.$error.required && patient_registration.mobile.$touched">Please enter mobile no</span>
                  <span class="help-block" ng-show="patient_registration.mobile.$error.pattern && patient_registration.mobile.$touched">Please enter correct number</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.email.$invalid && patient_registration.email.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 Email:
+                 Email(optional):
                </label>
                <div class="col-sm-10">
-                 <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email" >
+                 <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email"  ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/">
                  <span class="help-block" ng-show="patient_registration.email.$error.required && patient_registration.email.$touched">Please enter mail id</span>
                </div>
              </div>
@@ -109,8 +108,9 @@
                  City:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.city" placeholder="City" name="city" required>
+                 <input type="text" class="form-control boxed" ng-model="patient.city" placeholder="City" name="city" required ng-pattern="/^(\D)+$/">
                  <span class="help-block" ng-show="patient_registration.city.$error.required && patient_registration.city.$touched">Please enter city name</span>
+                 <span class="help-block" ng-show="patient_registration.city.$error.pattern && patient_registration.city.$touched">city name not be a number</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.state.$invalid && patient_registration.state.$touched)}">
@@ -120,7 +120,7 @@
                <div class="col-sm-10">
                  <input type="text" class="form-control boxed" ng-model="patient.state" placeholder="State" name="state" required ng-pattern="/^(\D)+$/">
                  <span class="help-block" ng-show="patient_registration.state.$error.required && patient_registration.state.$touched">Please enter state name</span>
-                 <span class="help-block" ng-show="patient_registration.state.$error.pattern && patient_registration.state.$touched">Please enter state name</span>
+                 <span class="help-block" ng-show="patient_registration.state.$error.pattern && patient_registration.state.$touched">state name not be a number</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.zipcode.$invalid && patient_registration.zipcode.$touched)}">
@@ -128,9 +128,8 @@
                 Zip:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code" ng-maxlength="6" required ng-pattern="/^[0-9]/">
+                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code"  required maxlength="10" ng-pattern="/^([a-zA-Z0-9@*#-]{8,15})$/">
                  <span class="help-block" ng-show="patient_registration.zipcode.$error.required && patient_registration.zipcode.$touched">Please enter zipcode</span>
-                 <span class="help-block" ng-show="patient_registration.zipcode.$error.pattern && patient_registration.zipcode.$touched">Please enter zipcode</span>
                </div>
              </div>
              <div class="form-group row">
@@ -139,7 +138,8 @@
                </label>
                <div class="col-sm-10">
                  <p class="input-group w-full">
-                   <input type="text" class="form-control" show-weeks="false" placeholder="Date Of Birth" ng-change="calculateAge()" uib-datepicker-popup ng-model="patient.dob" is-open="popup2.opened" datepicker-options="dateOptions"  close-text="Close" />
+                   <!-- <input type="date" class="form-control" ng-model="patient.dob" id="date1" placeholder="" ng-change="calculateAge()"> -->
+                   <input type="text" class="form-control" show-weeks="false" placeholder="Date Of Birth" ng-change="calculateAge(patient.dob)" uib-datepicker-popup ng-model="patient.dob" is-open="popup2.opened" datepicker-options="dateOptions" max-date="patient.reg_date" close-text="Close" />
                    <span class="input-group-btn">
                      <button type="button" class="btn btn-default" ng-click="open()"><i class="fa fa-calendar"></i></button>
                    </span>
@@ -172,17 +172,29 @@
                           <input class="radio" name="Marital" type="radio" value="Widow" ng-model="patient.marital_status">
                           <span>Widow</span>
                     </label>
+                    <label>
+                          <input class="radio" name="Marital" type="radio" value="Divorcy" ng-model="patient.marital_status">
+                          <span>Divorcy</span>
+                    </label>
                   </div>
                </div>
              </div>
-             <div class="form-group row" ng-class="{'has-error': (patient_registration.religion.$invalid && patient_registration.religion.$touched)}">
-             <label class="col-sm-2 form-control-label text-xs-right">
-               Religion:
-             </label>
+             <div class="form-group row">
+               <label class="col-sm-2 form-control-label text-xs-right">
+                 Religion:
+               </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.religion" placeholder="Religion" name="religion" required ng-pattern="/^(\D)+$/">
-                 <span class="help-block" ng-show="patient_registration.religion.$error.required && patient_registration.religion.$touched">Please enter religion</span>
-                 <span class="help-block" ng-show="patient_registration.religion.$error.pattern && patient_registration.religion.$touched">please enter religion</span>
+                 <select class="c-select form-control boxed" ng-model="patient.religion" required>
+                   <option selected>Select Category</option>
+                   <option value="Christianity">Christianity</option>
+                   <option value="Roman">Roman</option>
+                   <option value="Catholicism">Catholicism</option>
+                   <option value="Islam">Islam</option>
+                   <option value="Hinduism">Hinduism</option>
+                   <option value="Buddhism">Buddhism</option>
+                   <option value="Judaism">Judaism</option>
+                   <option value="Other">Other</option>
+                 </select>
                </div>
              </div>
              <div class="form-group row">
@@ -227,7 +239,7 @@
              </div>
              <div class="form-group row"  ng-if="patient.prof_type == 'Student'">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 School/College :
+                 School/College:
                </label>
                <div class="col-sm-10">
                  <input type="text" class="form-control boxed" ng-model="patient.school" name="school_name" placeholder="School/College">
