--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -41,15 +41,14 @@
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.first_name.$invalid && patient_registration.first_name.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 First Name:
+                 Name:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed"  ng-model="patient.first_name" name="first_name" placeholder="First Name"  ng-pattern="/^(\D)+$/" required>
+                 <input type="text" class="form-control boxed"  ng-model="patient.name" name="first_name" placeholder="First Name" required>
                  <span class="help-block"  ng-show="patient_registration.first_name.$error.required && patient_registration.first_name.$touched">Please enter first name</span>
-                 <span class="help-block"   ng-show="patient_registration.first_name.$error.pattern && patient_registration.first_name.$touched">first name should not be numeric</span>
                </div>
              </div>
-             <div class="form-group row" ng-class="{'has-error': (patient_registration.last_name.$invalid && patient_registration.last_name.$touched)}">
+             <!-- <div class="form-group row" ng-class="{'has-error': (patient_registration.last_name.$invalid && patient_registration.last_name.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
                  Last Name:
                </label>
@@ -58,7 +57,7 @@
                  <span class="help-block" ng-show="patient_registration.last_name.$error.required && patient_registration.last_name.$touched">Please enter last name</span>
                  <span class="help-block" ng-show="patient_registration.last_name.$error.pattern && patient_registration.last_name.$touched">last name should not be numeric</span>
                </div>
-             </div>
+             </div> -->
              <div class="form-group row">
                <label class="col-sm-2 form-control-label text-xs-right">
                 Gender:
@@ -92,7 +91,7 @@
                </label>
                <div class="col-sm-10">
                  <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email"  ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/">
-                 <span class="help-block" ng-show="patient_registration.email.$error.required && patient_registration.email.$touched">Please enter mail id</span>
+                 <span class="help-block" ng-show="patient_registration.email.$error.pattern && patient_registration.email.$touched">Please enter correct mail</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.street.$invalid && patient_registration.street.$touched)}">
@@ -129,7 +128,7 @@
                 Zip:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code"  required maxlength="10" ng-pattern="/^([a-zA-Z0-9@*#-]{8,15})$/">
+                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code"  required ng-pattern="/^([a-zA-Z0-9@*#-]{5,10})$/">
                  <span class="help-block" ng-show="patient_registration.zipcode.$error.required && patient_registration.zipcode.$touched">Please enter zipcode</span>
                </div>
              </div>
@@ -174,7 +173,7 @@
                           <span>Widow</span>
                     </label>
                     <label>
-                          <input class="radio" name="Marital" type="radio" value="Widow" ng-model="patient.marital_status">
+                          <input class="radio" name="Marital" type="radio" value="Divorcy" ng-model="patient.marital_status">
                           <span>Divorcy</span>
                     </label>
                   </div>
@@ -185,7 +184,7 @@
                  Religion:
                </label>
                <div class="col-sm-10">
-                 <select class="c-select form-control boxed" ng-model="patient.prof_type" required>
+                 <select class="c-select form-control boxed" ng-model="patient.religion" required>
                    <option selected>Select Category</option>
                    <option value="Christianity">Christianity</option>
                    <option value="Roman">Roman</option>
@@ -240,7 +239,7 @@
              </div>
              <div class="form-group row"  ng-if="patient.prof_type == 'Student'">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 School/College :
+                 School/College:
                </label>
                <div class="col-sm-10">
                  <input type="text" class="form-control boxed" ng-model="patient.school" name="school_name" placeholder="School/College">
