--- a/views/registration/patient_edit.html
+++ b/views/registration/patient_edit.html
@@ -91,7 +91,7 @@
                </label>
                <div class="col-sm-10">
                  <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email"  ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/">
-                 <span class="help-block" ng-show="patient_registration.email.$error.required && patient_registration.email.$touched">Please enter mail id</span>
+                 <span class="help-block" ng-show="patient_registration.email.$error.pattern && patient_registration.email.$touched">Please enter correct mail</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.street.$invalid && patient_registration.street.$touched)}">
@@ -128,7 +128,7 @@
                 Zip:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code"  required maxlength="10" ng-pattern="/^([a-zA-Z0-9@*#-]{8,15})$/">
+                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code"  required ng-pattern="/^([a-zA-Z0-9@*#-]{5,10})$/">
                  <span class="help-block" ng-show="patient_registration.zipcode.$error.required && patient_registration.zipcode.$touched">Please enter zipcode</span>
                </div>
              </div>
