--- a/views/registration/patient_list.html
+++ b/views/registration/patient_list.html
@@ -4,7 +4,7 @@
          <div class="row">
              <div class="col-md-6">
                  <h3 class="title">
-                     Patient List
+                     Patient List<translate text-value="Patient List" language="language">
                      <a ui-sref="newRegistration" class="btn btn-primary btn-sm rounded-s m-l-20">
                        Add New
                      </a>
