--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -80,9 +80,7 @@
                  Mobile:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.mobile" name="mobile" placeholder="Mobile" required ng-pattern="/^((\+\d{1,3}(-| )?\(?\d\)?(-| )?\d{1,3})|(\(?\d{2,3}\)?))(-| )?(\d{3,4})(-| )?(\d{4})(( x| ext)\d{1,5}){0,1}$/">
-                 <span class="help-block" ng-show="patient_registration.mobile.$error.required && patient_registration.mobile.$touched">Please enter mobile no</span>
-                 <span class="help-block" ng-show="patient_registration.mobile.$error.pattern && patient_registration.mobile.$touched">Please enter correct number</span>
+                 <phonenumber-directive placeholder="'Phone Number'" customclass= "'form-control '"  model="patient.mobile"></phonenumber-directive>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.email.$invalid && patient_registration.email.$touched)}">
