--- a/views/registration/patient_list.html
+++ b/views/registration/patient_list.html
@@ -4,15 +4,16 @@
          <div class="row">
              <div class="col-md-6">
                  <h3 class="title">
-                     Patient List
+                     <translate text-value="Patient List" language="language"></translate>
                      <a ui-sref="newRegistration" class="btn btn-primary btn-sm rounded-s m-l-20">
-                       Add New
+                        <translate text-value="Add New" language="language"></translate>
                      </a>
                      <!-- <a href="#" class="btn btn-danger btn-sm rounded-s m-l-5">
                        Delete
                      </a> -->
                  </h3>
-                 <p class="title-description"> List of registered patient</p>
+                 <translate text-value="List of registered patient" language="language"></translate>
+                 <!-- <p class="title-description"> List of registered patient</p> -->
              </div>
          </div>
      </div>
