change age to religion

--- a/views/registration/patient_view.html
+++ b/views/registration/patient_view.html
@@ -59,7 +59,7 @@
                     <td>{{registerDetails.age}}</td>
                   </tr>
                   <tr>
-                    <th scope="row">Age</th>
+                    <th scope="row">Religion </th>
                     <td>{{registerDetails.religion}}</td>
                   </tr>
                   <tr>
